# neofluxon

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  DefaultImageDecoder.cpp  DefaultImageDecoder.h  ImageData.cpp  ImageData.h  ImageDecoder.cpp  ImageDecoder.h  JpgImageDecoder.cpp  JpgImageDecoder.h  LibRawImageDecoder.cpp  LibRawImageDecoder.h  NeofluxonCore.cpp  NeofluxonCore.h  NfBrowser.cpp  NfBrowser.h  NfCache.cpp  NfCache.h  NfDiskCache.cpp  NfDiskCache.cpp_  NfDiskCache.h_  NfDiskChache.h  NfForegroundThreadPool.cpp  NfForegroundThreadPool.h  NfForegroundThreadPool.h_  NfGuiCache.cpp  NfGuiCache.h  NfGuiImage.h  NfGuiThumbnail.cpp  NfGuiThumbnail.h  NfHash.cpp  NfHash.h  NfImage.cpp  NfImage.h  NfImageData.cpp  NfImageData.h  NfImageDecoder.cpp  NfImageDecoder.h  NfImageTask.cpp  NfImageTask.h  NfLogger.cpp  (+42 more)
src/core/gui/: NfGuiCache.cpp  NfGuiCache.h  NfGuiImage.h  NfGuiThumbnail.cpp  NfGuiThumbnail.h
src/include/: Neofluxon.h
src/ui/: CMakeLists.txt
src/ui/common/: CMakeLists.txt  NfPhotoProvider.cpp  NfPhotoProvider.h  NfQtPixmap.cpp  NfQtPixmap.h  NfUiFolderModeState.h  NfUiLibraryModeState.cpp  NfUiLibraryModeState.h  NfUiShootsModeState.cpp  NfUiShootsModeState.h  NfUiState.cpp  NfUiState.h
src/ui/common/context/: NfContext.h  NfFolderContext.h
src/ui/common/state/: NfUiFolderModeState.cpp  NfUiFolderModeState.h  NfUiLibraryModeState.h  NfUiShootsModeState.h  NfUiState.cpp  NfUiState.h
src/ui/desktop/: CMakeLists.txt  LqfApplication.cpp  LqfApplication.h  NfApplication.cpp  NfApplication.h  NfMainWindow.cpp  NfMainWindow.h  NfPhotoProvider.cpp  NfPhotoProvider.h  NfQtPixmap.cpp  NfQtPixmap.h  main.cpp
src/ui/desktop/models/: CMakeLists.txt  NfBrowserModel.cpp  NfBrowserModel.h  NfFolderModel.cpp  NfFolderModel.h
src/ui/desktop/resources/: resources.qrc  style-cool-teal-desktop.qcss  style-desktop.qcss
src/ui/desktop/widgets/: CMakeLists.txt  LqfMainWindow.cpp  LqfMainWindow.h  LqfPanel.cpp  LqfPanel.h  NfBrowserView.cpp  NfBrowserView.h  NfCentralWidget.cpp  NfCentralWidget.h  NfFolderView.cpp  NfFolderView.h  NfLeftPanel.cpp  NfLeftPanel.h  NfMainMenu.cpp  NfMainMenu.h  NfMainWindow.cpp  NfMainWindow.h  NfPanel.cpp  NfPanel.h  NfPathBrowser.cpp  NfPathBrowser.h  NfPhotoPreviewView.cpp  NfPhotoPreviewView.h  NfPreviewModeView.cpp  NfPreviewModeView.h  NfSettingsDialog.cpp  NfSettingsDialog.h  NfStyledWidget.cpp  NfStyledWidget.h  NfThumbnailsModeView.cpp  NfThumbnailsModeView.h  NfTopBar.cpp  NfTopBar.h
